# recording

./: 1、录制屏幕时出现的帧画面回退现象以及解决方法.cpp  CMakeLists.txt  README.md  RTMP_使用ffmpeg底层封装好的API进行网络传输出现断开连接的情况.cpp  recording.slnx  recording.vcxproj  recording.vcxproj.filters  test_Clock.cpp  test_DXGI.cpp  test_DXGI_copy_frame_to_Queue.cpp  test_DshowAudioCapture.cpp  test_IFrame_Packet.cpp  test_Muxer_Streamer.cpp  test_RTMP_Muxer_Streamer.cpp  test_ThreadEventSDL_AudioQueue.cpp  test_VideoFfmpegEncoder.cpp  test_concurrentQueue.cpp  test_ffmpeg_SDL2.cpp  test_find_device_name_with_ffmpeg.cpp  test_logger.cpp  一些问题描述、解答and设计思考.cpp  关于传递类的非静态方法到另一个函数中.cpp  关于输出格式上下文video_audio流的时间基何时被自动赋值.cpp
data_out/audio/: test_DshowCapture.aac  test_DshowCapture.pcm
data_out/av/: test_Muxer_Streamer.aac
include/: libav_h.h
include/concurrency/: ConcurrentQueue.h
include/config/: Config.h
include/core/: Clock.h  Context.h  ErrorPolicy.h  FrameWrapper.h  IFrame.h  Interfaces.h  MediaTypes.h  PacketWrapper.h
include/event/: ThreadEventSDL.h
include/factory/: ComponentFactory.h  singleton.h
include/infra/: FfmpegContextManager.h  Logger.h
include/pipeline/: Nodes.h  PipelineNodeBase.h  PipelineOrchestrator.h
nginx_test/: nginx8080.exe - 快捷方式.lnk
src/: FrameWrapper.cpp  main.cpp
src/concurrency/: ConcurrentQueue.cpp
src/config/: Config.cpp
src/core/: Clock.cpp  ErrorPolicy.cpp  MediaTypes.cpp  PacketWrapper.cpp
src/event/: ThreadEventSDL.cpp
src/factory/: ComponentFactory.cpp
src/infra/: FfmpegContextManager.cpp  Logger.cpp
src/pipeline/: Nodes.cpp  (+2 more)
(+15 files in other folders)
